Update `contrast-color()` for removal of `max` parameter https://bugs.webkit.org/show_bug.cgi?id=287410
Reviewed by Tim Nguyen.

Updates the implementation of `contrast-color()` to match the latest
spec which removed `max` parameter (see https://github.com/w3c/csswg-drafts/pull/11654).

Also updates tests and moves the non-WPT tests to WPT, changing the
computed style tests to allow either `white` or `black` for all computed
values due to the lack of agreed upon algorithm.

To keep coverage of the algorithm in WebKit, a copy of the computed style
test was kept in css/fast that retains the specific results.

* LayoutTests/fast/css/color-computed-contrast-color-function-expected.txt:
* LayoutTests/fast/css/color-computed-contrast-color-function.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-color/parsing/color-computed-contrast-color-function-expected.txt: Copied from LayoutTests/fast/css/color-computed-contrast-color-function-expected.txt.
* LayoutTests/imported/w3c/web-platform-tests/css/css-color/parsing/color-computed-contrast-color-function.html: Copied from LayoutTests/fast/css/color-computed-contrast-color-function.html.
* LayoutTests/imported/w3c/web-platform-tests/css/css-color/parsing/color-invalid-contrast-color-function-expected.txt: Renamed from LayoutTests/fast/css/color-invalid-contrast-color-function-expected.txt.
* LayoutTests/imported/w3c/web-platform-tests/css/css-color/parsing/color-invalid-contrast-color-function.html: Renamed from LayoutTests/fast/css/color-invalid-contrast-color-function.html.
* LayoutTests/imported/w3c/web-platform-tests/css/css-color/parsing/color-valid-contrast-color-function-expected.txt: Renamed LayoutTests/fast/css/color-valid-contrast-color-function-expected.txt.
* LayoutTests/imported/w3c/web-platform-tests/css/css-color/parsing/color-valid-contrast-color-function.html: Renamed LayoutTests/fast/css/color-valid-contrast-color-function.html.
* Source/WebCore/css/parser/CSSPropertyParserConsumer+Color.cpp:
* So

--- a/LayoutTests/imported/w3c/web-platform-tests/css/css-color/parsing/color-invalid-contrast-color-function.html
+++ b/LayoutTests/imported/w3c/web-platform-tests/css/css-color/parsing/color-invalid-contrast-color-function.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Test CSS Color Module 5 contrast-color() parsing</title>
 <meta charset="utf-8">
-<script src="../../resources/testharness.js"></script>
-<script src="../../resources/testharnessreport.js"></script>
-<script src="../../imported/w3c/web-platform-tests/css/support/parsing-testcommon.js"></script>
+<title>Test CSS Color Module 5 contrast-color() computed value</title>
+<link rel="author" title="Sam Weinig" href="mailto:sam@webkit.org">
+<link rel="help" href="https://drafts.csswg.org/css-color-5/#contrast-color">
+<script src="/resources/testharness.js"></script>
+<script src="/resources/testharnessreport.js"></script>
+<script src="/css/support/parsing-testcommon.js"></script>
 <style>
   #container {
     container-type: inline-size;
@@ -25,6 +27,8 @@ test_invalid_value("background-color", "contrast-color(1)");
 test_invalid_value("background-color", "contrast-color(max)");
 test_invalid_value("background-color", "contrast-color(max max)");
 test_invalid_value("background-color", "contrast-color(max white)");
+test_invalid_value("background-color", "contrast-color(white white)");
+test_invalid_value("background-color", "contrast-color(white max)");
 test_invalid_value("background-color", "contrast-color(white min)");
 test_invalid_value("background-color", "contrast-color(white max bar)");
 
