Improve <input type=color alpha> performance on macOS https://bugs.webkit.org/show_bug.cgi?id=286803 rdar://143955048
Reviewed by Aditya Keerthi.

Using data: URLs here resulted in annoying flickering when moving the
alpha slider quickly.

Using SVG directly in the shadow tree ran into
https://bugs.webkit.org/show_bug.cgi?id=287472 so therefore we use a
div element with a polygon clip-path. This results in additional render
layers, but websites will likely not have a lot of these controls so
that seems okay.

* LayoutTests/fast/forms/color/color-input-swatch-expected.txt:
* LayoutTests/fast/forms/color/color-input-swatch.html:
* LayoutTests/platform/mac/fast/forms/color/color-input-swatch-expected.txt:
* LayoutTests/platform/mac/fast/forms/color/input-appearance-color-expected.txt:
* Source/WebCore/html/ColorInputType.cpp:
(WebCore::ColorInputType::createShadowSubtree):
(WebCore::ColorInputType::updateColorSwatch):
* Source/WebCore/rendering/RenderTheme.h:
(WebCore::RenderTheme::createColorWellSwatchSubtree):
* Source/WebCore/rendering/mac/RenderThemeMac.h:
* Source/WebCore/rendering/mac/RenderThemeMac.mm:
(WebCore::RenderThemeMac::createColorWellSwatchSubtree):
(WebCore::RenderThemeMac::setColorWellSwatchBackground):

Canonical link: https://commits.webkit.org/290228@main

--- a/LayoutTests/fast/forms/color/color-input-swatch.html
+++ b/LayoutTests/fast/forms/color/color-input-swatch.html
@@ -4,8 +4,7 @@
 <script>
 function log(swatch) {
   evalAndLogResult("getComputedStyle(swatch).backgroundColor");
-  evalAndLogResult("getComputedStyle(swatch).backgroundImage");
-  evalAndLogResult("getComputedStyle(swatch).backgroundSize");
+  evalAndLogResult("swatch.innerHTML");
 }
 
 const control = document.querySelector("input");
