[MSE in Worker] ASSERTION FAILED: The atom string comes from an other thread! https://bugs.webkit.org/show_bug.cgi?id=287389 rdar://144502119
Reviewed by Eric Carlson and Chris Dumez.

When a MediaSource is used in a DedicatedWorker, the {Audio|Video|Text}TrackPrivateRemote (owned by the MediaPlayerPrivateRemote)
is shared with both the HTMLMediaElement's tracks on the main thread, and the SourceBuffer's tracks in the DedicatedWorker.
When the {Audio|Video|Text}Track were constructed, we passed the language and label strings
which constructed the AudioTrack's label and language AtomStrings from that same string.
When the AtomString is constructed, it mutates the original String's m_hashAndFlags to indicate
that the string is now part of the AtomString table.
As we then attempted to create another AtomString with that same original String on another thread,
we would get the assertion.
Additionally, we could have used the TrackPrivateRemote's language and label Strings on multiple threads without
a call to String.isolatedCopy() in between which isn't allowed (Strings are only ever copied
via a shallow copy).
We now only return an isolated string whenever the TrackPrivateRemote getters are called.

We also extend the same mechanism to InbandTextTrackPrivate's inBandMetadataTrackDispatchType string.

Fly-by: Have MediaSourcePrivate::currentTime() return zeroTime() instead of invalidTime() when detached (this got missed in 284322@main)

Added tests checking that we can correctly append new init and media segments that contains language information
to a SourceBuffer constructed on a DedicatedWorker.
* LayoutTests/platform/glib/media/media-source/worker/media-managedmse-tracks-worker-expected.txt: Added.
* LayoutTests/media/media-source/worker/media-managedmse-tracks-worker-expected.txt: Added.
* LayoutTests/media/media-source/worker/media-managedmse-tracks-worker.html: Copied from LayoutTests/media/media-source/worker/media-managedmse-worker.html.
* LayoutTests/media/medi

--- a/LayoutTests/media/media-source/worker/media-managedmse-tracks-worker.html
+++ b/LayoutTests/media/media-source/worker/media-managedmse-tracks-worker.html
@@ -23,6 +23,10 @@
                 await canPlayPromise;
                 testExpected('video.readyState', HTMLMediaElement.HAVE_CURRENT_DATA, '>=');
                 testExpected('video.buffered.length', 1);
+                testExpected('video.audioTracks.length', 1);
+                testExpected('video.audioTracks.item(0).language', "eng");
+                testExpected('video.videoTracks.length', 1);
+                testExpected('video.videoTracks.item(0).language', "eng");
                 endTest();
                 break;
             case 'error':
@@ -36,7 +40,7 @@
         };
         run('video.disableRemotePlayback = true');
         worker.postMessage({topic: 'setup'});
-        worker.postMessage({topic: 'manifest', arg: '../content/test-48khz-manifest.json'});
+        worker.postMessage({topic: 'manifest', arg: '../content/test-fragmented-manifest.json'});
     });
     </script>
 </head>
