[iOS] fast/events/ios/contenteditable-autocapitalize.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=287578 rdar://144713635
Reviewed by Abrar Rahman Protyasha and Aditya Keerthi.

This iOS layout test sometimes fails, with the following test output:

```
-PASS With autocapitalize: none, the output is: "to"
+FAIL With autocapitalize: none, the output is: "t" (expected "to")
```

...which suggests that we occasionally fail to wait for `o` to be typed after focusing the text
field for the first time. Other (similar) tests that attempt to type a sequence of characters on iOS
are robust against this, by waiting for either the `input` or `keyup` event to be handled after
typing each key, before moving on with the rest of the test.

To fix this, we extract this technique for waiting on a DOM event before typing the next character
into a new `UIHelper` method, and deploy this new helper method in various tests (including the
flaky test in this bug) to avoid code duplication.

* LayoutTests/editing/caret/ios/place-caret-after-autocorrected-word.html:
* LayoutTests/editing/input/cocoa/autocorrect-off.html:
* LayoutTests/editing/input/ios/autocorrection-replaces-space-with-period.html:
* LayoutTests/editing/input/ios/invalidate-text-entry-context-when-clearing-text-area.html:
* LayoutTests/editing/selection/ios/extend-selection-with-inline-predictions.html:
* LayoutTests/fast/events/ios/contenteditable-autocapitalize.html:
* LayoutTests/fast/forms/ios/autocapitalize-words.html:
* LayoutTests/fast/repaint/placeholder-after-caps-lock-hidden.html:
* LayoutTests/resources/ui-helper.js:

Introduce the new test helper (`typeCharacters`).

(window.UIHelper.async typeCharacters):
(window.UIHelper):
(UIHelper.EventStreamBuilder.prototype._reset): Deleted.
(UIHelper.EventStreamBuilder.prototype.begin): Deleted.
(UIHelper.EventStreamBuilder.prototype.wait): Deleted.
(UIHelper.EventStreamBuilder.prototype.move): Deleted.
(UIHelper.EventStreamBuilder.prototype.end): Delete

--- a/LayoutTests/editing/input/cocoa/autocorrect-off.html
+++ b/LayoutTests/editing/input/cocoa/autocorrect-off.html
@@ -29,11 +29,7 @@
         if (window.testRunner)
             await UIHelper.activateElementAndWaitForInputSession(element);
 
-        for (let character of [...stringToType]) {
-            await UIHelper.callFunctionAndWaitForEvent(() => {
-                return window.testRunner ? UIHelper.typeCharacter(character) : Promise.resolve();
-            }, element, "input");
-        }
+        await UIHelper.typeCharacters(stringToType);
 
         element.blur();
 
