--- a/LayoutTests/editing/caret/ios/place-caret-after-autocorrected-word.html
+++ b/LayoutTests/editing/caret/ios/place-caret-after-autocorrected-word.html
@@ -24,13 +24,7 @@ addEventListener("load", async () => {
     const afterEndOfWord = { x : 250, y : rect.top + rect.height / 2 };
 
     await UIHelper.activateAndWaitForInputSessionAt(afterEndOfWord.x, afterEndOfWord.y);
-
-    for (let character of [..."Testign"]) {
-        await UIHelper.callFunctionAndWaitForEvent(async () => {
-            await UIHelper.typeCharacter(character);
-            await UIHelper.ensurePresentationUpdate();
-        }, editor, "input");
-    }
+    await UIHelper.typeCharacters("Testign");
     testPassed("Typed 'Testign'");
 
     await UIHelper.applyAutocorrection("Testing", "Testign", true);
