REGRESSION:(289950@main)[macOS]: http/tests/webarchive tests are a flaky failures with image failures(failure in EWS) https://bugs.webkit.org/show_bug.cgi?id=287509 rdar://144639388
Reviewed by Ryosuke Niwa.

In 289950@main, we started to capture some memory-cached files in webarchive, which helps ensure high fidelity of the
result. This change makes webarchive content less deterministic -- it will be dependent on what is availalbe in memory
cache. And this causes webarhive tests to be flaky because we compare the running result with a fixed content. To fix
the flakiness, now we clear memory cache before running the webarchive tests.

* LayoutTests/http/tests/webarchive/cross-origin-stylesheet-crash.html:
* LayoutTests/http/tests/webarchive/test-css-url-encoding-expected.txt: Added.
* LayoutTests/http/tests/webarchive/test-css-url-encoding-shift-jis-expected.txt: Added.
* LayoutTests/http/tests/webarchive/test-css-url-encoding-shift-jis.html:
* LayoutTests/http/tests/webarchive/test-css-url-encoding-utf-8-expected.txt: Added.
* LayoutTests/http/tests/webarchive/test-css-url-encoding-utf-8.html:
* LayoutTests/http/tests/webarchive/test-css-url-encoding.html:
* LayoutTests/http/tests/webarchive/test-preload-resources-expected.txt: Added.
* LayoutTests/http/tests/webarchive/test-preload-resources.html:
* LayoutTests/platform/mac-wk2/TestExpectations:
* LayoutTests/platform/mac/http/tests/webarchive/cross-origin-stylesheet-crash-expected.txt:

Canonical link: https://commits.webkit.org/290309@main

--- a/LayoutTests/http/tests/webarchive/cross-origin-stylesheet-crash.html
+++ b/LayoutTests/http/tests/webarchive/cross-origin-stylesheet-crash.html
@@ -1,6 +1,9 @@
 <html>
 <head>
 <script>
+if (window.internals)
+    internals.clearMemoryCache();
+
 if (window.testRunner)
     testRunner.dumpDOMAsWebArchive();
 </script>
