--- a/LayoutTests/http/tests/webarchive/test-css-url-encoding-shift-jis.html
+++ b/LayoutTests/http/tests/webarchive/test-css-url-encoding-shift-jis.html
@@ -6,6 +6,9 @@
 <link rel="stylesheet" type="text/css" href="resources/test-shift-jis.css">
 <link rel="stylesheet" type="text/css" href="resources/test-utf-8.css">
 <script>
+if (window.internals)
+    internals.clearMemoryCache();
+
 if (window.testRunner)
     testRunner.dumpDOMAsWebArchive();
 </script>
