--- a/LayoutTests/http/tests/webarchive/test-preload-resources.html
+++ b/LayoutTests/http/tests/webarchive/test-preload-resources.html
@@ -9,6 +9,9 @@
 <link rel="alternate stylesheet" type="text/css" href="resources/test-preload-resources.css?6" title="gray">
 
 <script>
+if (window.internals)
+    internals.clearMemoryCache();
+
 if (window.testRunner)
     testRunner.dumpDOMAsWebArchive();
 </script>
