Stagemode Layout Test Failing "Can't find variable: makeSource" https://bugs.webkit.org/show_bug.cgi?id=287419 rdar://144548301
Reviewed by Ada Chan.

Fixes a reference error in the stage mode layout tests due to an undefined function 'makeSource'

* LayoutTests/model-element/model-element-stagemode-expected.txt:
- Updated newlines for expected.txt to match returned test txt
* LayoutTests/model-element/model-element-stagemode.html:
- moved `makeSource` to model-utils.js such that both stagemode and source layout tests can reference it

Canonical link: https://commits.webkit.org/290375@main

--- a/LayoutTests/model-element/model-element-stagemode.html
+++ b/LayoutTests/model-element/model-element-stagemode.html
@@ -10,19 +10,15 @@
 'use strict';
 
 promise_test(async t => {
-    const model = document.createElement("model");
-    const firstSource = model.appendChild(makeSource("resources/cube.usdz"));
+    const [model, source] = createModelAndSource(t, "resources/cube.usdz");
     await model.ready;
 
     assert_equals(model.stageMode, "");
     model.stageMode = "orbit";
     assert_equals(model.stageMode, "orbit");
 
-    const secondSource = model.appendChild(makeSource("resources/heart.usdz"));
-    firstSource.remove();
-    assert_equals(model.currentSrc, secondSource.src);
+    source.src = "resources/heart.usdz";
     await model.ready;
-
     assert_equals(model.stageMode, "orbit");
 }, `Setting stage mode persists after changing source on the same model element`);
 
