Web Inspector: Worker Info not Visible In Most Timeline Profile Views like JavaScript & Events https://bugs.webkit.org/show_bug.cgi?id=263334 rdar://117491838
Reviewed by BJ Burg.

This will allow developers to investigate performance issues in `Worker` using the Timelines Tab just like they can already do for other page content (i.e. main thread).

* Source/JavaScriptCore/inspector/protocol/Timeline.json:
* Source/WebCore/inspector/WorkerInspectorController.cpp:
(WebCore::WorkerInspectorController::createLazyAgents):
Expose `Timeline` in `Worker`.

* Source/WebCore/inspector/agents/InspectorTimelineAgent.h:
(WebCore::InspectorTimelineAgent::shouldStartHeapInstrument const):
(WebCore::InspectorTimelineAgent::instruments const):
* Source/WebCore/inspector/agents/InspectorTimelineAgent.cpp:
(WebCore::InspectorTimelineAgent::InspectorTimelineAgent):
(WebCore::InspectorTimelineAgent::enable):
(WebCore::InspectorTimelineAgent::disable):
(WebCore::InspectorTimelineAgent::start):
(WebCore::InspectorTimelineAgent::stop):
(WebCore::InspectorTimelineAgent::enabled const):
(WebCore::InspectorTimelineAgent::internalEnable):
(WebCore::InspectorTimelineAgent::internalDisable):
(WebCore::InspectorTimelineAgent::tracking const):
(WebCore::InspectorTimelineAgent::internalStart):
(WebCore::InspectorTimelineAgent::internalStop):
(WebCore::InspectorTimelineAgent::autoCaptureStarted const):
(WebCore::InspectorTimelineAgent::startFromConsole):
(WebCore::InspectorTimelineAgent::startProgrammaticCapture):
(WebCore::InspectorTimelineAgent::stopProgrammaticCapture):
(WebCore::InspectorTimelineAgent::toggleHeapInstrument):
(WebCore::InspectorTimelineAgent::toggleTimelineInstrument):
(WebCore::InspectorTimelineAgent::lastRecordEntry):
(WebCore::currentRunLoop): Deleted.
(WebCore::InspectorTimelineAgent::setAutoCaptureEnabled): Deleted.
(WebCore::InspectorTimelineAgent::didInvalidateLayout): Deleted.
(WebCore::InspectorTimelineAgent::willLayout): Deleted.
(WebCore::InspectorTimelineAgent::didLa

--- a/LayoutTests/inspector/sampling-profiler/call-frame-with-dom-functions.html
+++ b/LayoutTests/inspector/sampling-profiler/call-frame-with-dom-functions.html
@@ -3,6 +3,7 @@
 <head>
 <script src="../../resources/js-test-pre.js"></script>
 <script src="../../http/tests/inspector/resources/protocol-test.js"></script>
+<script src="resources/calling-context-tree.js"></script>
 <script>
 
 function runFor(func, millis) {
@@ -30,21 +31,21 @@ function test()
         description: "Sample some basic code.",
         test(resolve, reject) {
             InspectorProtocol.awaitEvent({event: "ScriptProfiler.trackingComplete"}).then((messageObject) => {
-                let tree = WI.CallingContextTree.__test_makeTreeFromProtocolMessageObject(messageObject);
+                let tree = ProtocolTest.CallingContextTree.createFromProtocolMessageObject(messageObject);
 
                 let trace = [
                     {name: "createElement"},
                     {name: "foo"},
                     {name: "runFor"}
                 ];
-                ProtocolTest.expectThat(tree.__test_matchesStackTrace(trace), "Should have seen stacktrace:\n" + JSON.stringify(trace, undefined, 2));
+                ProtocolTest.expectThat(ProtocolTest.CallingContextTree.matchesStackTrace(tree, trace), "Should have seen stacktrace:\n" + JSON.stringify(trace, undefined, 2));
 
                 trace = [
                     {name: "appendChild"},
                     {name: "foo"},
                     {name: "runFor"}
                 ];
-                ProtocolTest.expectThat(tree.__test_matchesStackTrace(trace), "Should have seen stacktrace:\n" + JSON.stringify(trace, undefined, 2));
+                ProtocolTest.expectThat(ProtocolTest.CallingContextTree.matchesStackTrace(tree, trace), "Should have seen stacktrace:\n" + JSON.stringify(trace, undefined, 2));
 
                 resolve();
             });
