--- a/LayoutTests/inspector/sampling-profiler/eval-source-url.html
+++ b/LayoutTests/inspector/sampling-profiler/eval-source-url.html
@@ -3,6 +3,7 @@
 <head>
 <script src="../../resources/js-test-pre.js"></script>
 <script src="../../http/tests/inspector/resources/protocol-test.js"></script>
+<script src="resources/calling-context-tree.js"></script>
 <script>
 
 function runFor(func, millis) {
@@ -34,7 +35,7 @@ function test()
         description: "Sample some basic code.",
         test(resolve, reject) {
             InspectorProtocol.awaitEvent({event: "ScriptProfiler.trackingComplete"}).then((messageObject) => {
-                let tree = WI.CallingContextTree.__test_makeTreeFromProtocolMessageObject(messageObject);
+                let tree = ProtocolTest.CallingContextTree.createFromProtocolMessageObject(messageObject);
 
                 let trace = [
                     {name: "foo"},
@@ -43,7 +44,7 @@ function test()
                     {name: "bar"},
                     {name: "runFor"}
                 ];
-                ProtocolTest.expectThat(tree.__test_matchesStackTrace(trace), "Should have seen stacktrace:\n" + JSON.stringify(trace, undefined, 2));
+                ProtocolTest.expectThat(ProtocolTest.CallingContextTree.matchesStackTrace(tree, trace), "Should have seen stacktrace:\n" + JSON.stringify(trace, undefined, 2));
                 resolve();
             });
 
