--- a/LayoutTests/inspector/sampling-profiler/expression-location-info.html
+++ b/LayoutTests/inspector/sampling-profiler/expression-location-info.html
@@ -3,6 +3,7 @@
 <head>
 <script src="../../resources/js-test-pre.js"></script>
 <script src="../../http/tests/inspector/resources/protocol-test.js"></script>
+<script src="resources/calling-context-tree.js"></script>
 <script>
 
 function runFor(func, millis) {
@@ -16,13 +17,13 @@ function foo() {
     {
         let o = {};
         for (let i = 0; i < 10000; i++) {
-            o["s" + i] = i; // line 19, column 14("[")
+            o["s" + i] = i; // line 20, column 14("[")
         }
     }
     {
         let o = {};
         for (let i = 0; i < 10000; i++) {
-            o["s" + i] = i; // line 25, column 14("[")
+            o["s" + i] = i; // line 26, column 14("[")
         }
     }
 }
@@ -37,24 +38,24 @@ function test()
         description: "Make sure we properly collect location information.",
         test(resolve, reject) {
             InspectorProtocol.awaitEvent({event: "ScriptProfiler.trackingComplete"}).then((messageObject) => {
-                let tree = WI.CallingContextTree.__test_makeTreeFromProtocolMessageObject(messageObject);
-                let foundLine19Column14 = false;
-                let foundLine25Column14 = false;
+                let tree = ProtocolTest.CallingContextTree.createFromProtocolMessageObject(messageObject);
+                let foundLine20Column14 = false;
+                let foundLine26Column14 = false;
                 tree.forEachNode((node) => {
                     if (node.name !== "foo")
                         return;
 
                     for (let lineColumnHashedString of Object.getOwnPropertyNames(node._expressionLocations)) {
                         let [lineNumber, columnNumber] = lineColumnHashedString.split(":").map(Number);
-                        if (lineNumber === 19 && columnNumber === 14)
-                            foundLine19Column14 = true;
-                        if (lineNumber === 25 && columnNumber === 14)
-                            foundLine25Column14 = true;
+                        if (lineNumber === 20 && columnNumber === 14)
+                            foundLine20Column14 = true;
+                        if (lineNumber === 26 && columnNumber === 14)
+                            foundLine26Column14 = true;
                     }
                 });
 
-                ProtocolTest.expectThat(foundLine19Column14, "Should have seen line 19, column 14.");
-                ProtocolTest.expectThat(foundLine25Column14, "Should have seen line 25, column 14.");
+                ProtocolTest.expectThat(foundLine20Column14, "Should have seen line 20, column 14.");
+                ProtocolTest.expectThat(foundLine26Column14, "Should have seen line 26, column 14.");
                 resolve();
             });
 
