Use sendWithAsyncReply for WebFullScreenManagerProxy::ExitFullScreen https://bugs.webkit.org/show_bug.cgi?id=287803
Reviewed by Eric Carlson.

It is all straightforward except two cases where WKFullScreenWindowController.exitFullScreen
is called on macOS that are not as a reply to the web content process.  One when the web
content process is unresponsive, and one when the system exit fullscreen button is pressed.
I added a button to my layout test to test the first and manually tested the first and second.

My change in WKFullScreenWindowController.mm may initially look a bit confusing, but I effectively
renamed _exitFullScreenCompletionHandler to _beganExitFullScreenCompletionHandler then reused the
name of _exitFullScreenCompletionHandler for the completion handler of exitFullscreen:

This is a step towards getting fullscreen working with site isolation, and the iOS site isolation
fullscreen test is already more like the macOS test because of this change.

* LayoutTests/http/tests/site-isolation/resources/fullscreen.html:
* Source/WebKit/UIProcess/API/C/WKPage.cpp:
(WKPageSetFullScreenClientForTesting):
(WKPageWillExitFullScreen): Deleted.
* Source/WebKit/UIProcess/API/C/WKPage.h:
* Source/WebKit/UIProcess/API/C/playstation/WKView.cpp:
(WKViewWillExitFullScreen):
* Source/WebKit/UIProcess/API/C/playstation/WKView.h:
* Source/WebKit/UIProcess/API/gtk/PageClientImpl.cpp:
(WebKit::PageClientImpl::exitFullScreen):
* Source/WebKit/UIProcess/API/gtk/PageClientImpl.h:
* Source/WebKit/UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseWillExitFullScreen):
* Source/WebKit/UIProcess/API/gtk/WebKitWebViewBasePrivate.h:
* Source/WebKit/UIProcess/API/wpe/PageClientImpl.cpp:
(WebKit::PageClientImpl::exitFullScreen):
* Source/WebKit/UIProcess/API/wpe/PageClientImpl.h:
* Source/WebKit/UIProcess/API/wpe/WPEWebView.cpp:
(WKWPE::View::willExitFullScreen):
* Source/WebKit/UIProcess/API/wpe/WPEWebView.h:
* Source/WebKit/UIProcess/WebFullScreenManagerProxy.cpp:
(WebKit::WebFull

--- a/LayoutTests/http/tests/site-isolation/resources/fullscreen.html
+++ b/LayoutTests/http/tests/site-isolation/resources/fullscreen.html
@@ -15,6 +15,10 @@
             await exitFullScreen();
         });
     }
+    function becomeUnresponsive() {
+        while (1);
+    }
 </script>
 <button onclick="enterFullScreen()">Enter</button>
 <button onclick="exitFullScreen()">Exit</button>
+<button onclick="becomeUnresponsive()">Become Unresponsive</button>
