--- a/LayoutTests/fast/page-color-sampling/basic-fixed-container-edge-sampling.html
+++ b/LayoutTests/fast/page-color-sampling/basic-fixed-container-edge-sampling.html
@@ -88,7 +88,7 @@ addEventListener("load", async () => {
         top: "rgb(0, 122, 255)",
         left: "rgb(255, 59, 48)",
         right: "rgb(52, 199, 89)",
-        bottom: "rgb(42, 42, 42)"
+        bottom: null
     });
 
     finishJSTest();
