REGRESSION (289928@main): [ macOS wk1] compositing/animation/repaint-after-clearing-shared-backing.html is a consistent image failure https://bugs.webkit.org/show_bug.cgi?id=287836
Reviewed by Simon Fraser.

Use `requestAnimationFrame` rather than `setTimeout` to increase reliability on WK1.

* LayoutTests/compositing/animation/repaint-after-clearing-shared-backing.html:
* LayoutTests/platform/mac-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/290615@main

--- a/LayoutTests/compositing/animation/repaint-after-clearing-shared-backing.html
+++ b/LayoutTests/compositing/animation/repaint-after-clearing-shared-backing.html
@@ -61,7 +61,7 @@
                 testRunner.waitUntilDone();
 
             document.querySelector(".content").addEventListener("animationend", event => {
-                setTimeout(() => {
+                requestAnimationFrame(() => {
                     event.target.classList.remove("fade-in");
                     event.target.classList.add("fade-out");
 
