--- a/LayoutTests/fast/images/hdr-basic-image.html
+++ b/LayoutTests/fast/images/hdr-basic-image.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<meta name="fuzzy" content="maxDifference=0-6; totalPixels=0-40000" />
 <style>
     .image-box {
         width: 200px;
@@ -17,9 +18,10 @@
     <script>
         if (window.internals && window.testRunner) {
             internals.clearMemoryCache();
+            internals.setScreenContentsFormatsForTesting(["RGBA8", "RGBA16F"]);
             testRunner.waitUntilDone();
         }
- 
+
         var image = new Image;
         image.onload = (() => {
             if (window.internals)
