AX: With ENABLE(INCLUDE_IGNORED_IN_CORE_AX_TREE) we need to eagerly recompute is-ignored for descendants of aria-hidden elements https://bugs.webkit.org/show_bug.cgi?id=288299 rdar://145387158
Reviewed by Chris Fleizach.

Prior to ENABLE(INCLUDE_IGNORED_IN_CORE_AX_TREE), we handled dynamic aria-hidden changes with AXObjectCache::childrenChanged.
However, with ENABLE(INCLUDE_IGNORED_IN_CORE_AX_TREE), there are no actual accessibility tree changes, just different
is-ignored values for the subtree. This fixes these two tests:

  - accessibility/aria-hidden-updates-alldescendants.html
  - accessibility/mac/iframe-aria-hidden.html

This commit also fixes an existing bug exposed by ENABLE(INCLUDE_IGNORED_IN_CORE_AX_TREE) where we don't process
childrenChanged events when the elements filling a slot change, which impacts the accessibility tree. This fixes
accessibility/mac/invalid-summary-element.html.

Finally, we fix accessibility/details-summary-content-hidden.html by making the test more async.

* LayoutTests/accessibility/details-summary-content-hidden.html:
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::onSlottedContentChange):
(WebCore::AXObjectCache::handleAttributeChange):
* Source/WebCore/accessibility/AXObjectCache.h:
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::addNodeOnlyChildren):
* Source/WebCore/dom/SlotAssignment.cpp:
(WebCore::NamedSlotAssignment::didChangeSlot):
* Source/WebCore/html/HTMLSlotElement.cpp:
(WebCore::HTMLSlotElement::updateAccessibilityOnSlotChange const):
* Source/WebCore/html/HTMLSlotElement.h:

Canonical link: https://commits.webkit.org/290908@main

--- a/LayoutTests/accessibility/details-summary-content-hidden.html
+++ b/LayoutTests/accessibility/details-summary-content-hidden.html
@@ -33,7 +33,7 @@ if (window.accessibilityController) {
         document.getElementById("details").removeAttribute("open");
         output += await expectAsync("details.isExpanded", "false");
         output += await expectAsync("summary.isExpanded", "false");
-        output += expect("!accessibilityController.accessibleElementById('content')", "true");
+        output += await expectAsync("!accessibilityController.accessibleElementById('content')", "true");
 
         debug(output);
         finishJSTest();
