[CSS Corner shape] Implement parsing for corner-shape https://bugs.webkit.org/show_bug.cgi?id=277913 rdar://133607859
Reviewed by Sam Weinig.

Add support for parsing `corner-shape` and the physical and logical longhands. The "edge" variants are not yet supported
(similarly, we don't support the border-radius edge properties either).

Currently just support the keyword values.

Add storage of the style values in `BorderData`. Repainting happens by virtue of `isEquivalentForPainting`.

* LayoutTests/imported/w3c/web-platform-tests/css/css-borders/tentative/parsing/corner-shape-computed-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-borders/tentative/parsing/corner-shape-valid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/all-prop-initial-xml-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-ui/compute-kind-widget-no-fallback-props-001.html: Add corner-shape to the list of native-appearance-disabling properties.
* LayoutTests/platform/ios/imported/w3c/web-platform-tests/css/css-cascade/all-prop-initial-xml-expected.txt:
* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/animation/CSSPropertyAnimation.cpp:
(WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):
* Source/WebCore/css/CSSPrimitiveValueMappings.h:
* Source/WebCore/css/CSSProperties.json:
* Source/WebCore/css/CSSProperty.h:
* Source/WebCore/css/CSSValueKeywords.in:
* Source/WebCore/css/ComputedStyleExtractor.cpp:
(WebCore::ComputedStyleExtractor::valueForPropertyInStyle const):
* Source/WebCore/css/ShorthandSerializer.cpp:
(WebCore::ShorthandSerializer::serialize):
* Source/WebCore/css/parser/CSSPropertyParser.cpp:
(WebCore::CSSPropertyParser::parseShorthand):
* Source/WebCore/rendering/style/BorderData.cpp:
(WebCore::BorderData::dump const):
* Source/WebCore/rendering/style/BorderData.h:
(WebCore::BorderData::topLeftCornerShape const):
(WebCore::BorderData::topRightCornerShape const):
(WebCore

--- a/LayoutTests/imported/w3c/web-platform-tests/css/css-ui/compute-kind-widget-no-fallback-props-001.html
+++ b/LayoutTests/imported/w3c/web-platform-tests/css/css-ui/compute-kind-widget-no-fallback-props-001.html
@@ -86,6 +86,14 @@ const fallbackProps = new Set([
   'border-start-end-radius',
   'border-end-start-radius',
   'border-end-end-radius',
+  'corner-top-left-shape',
+  'corner-top-right-shape',
+  'corner-bottom-left-shape',
+  'corner-bottom-right-shape',
+  'corner-start-start-shape',
+  'corner-start-end-shape',
+  'corner-end-start-shape',
+  'corner-end-end-shape',
 ]);
 
 let mutations = []
