[TexMap] Add tests for damage propagation https://bugs.webkit.org/show_bug.cgi?id=288465
Reviewed by Nikolas Zimmermann.

This change adds layout tests covering the most important damage propagation scenarios.

* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/glib/damage/accelerated-canvas-2d-fillRect-expected.txt: Added.
* LayoutTests/platform/glib/damage/accelerated-canvas-2d-fillRect.html: Added.
* LayoutTests/platform/glib/damage/animations-blur-expected.txt: Added.
* LayoutTests/platform/glib/damage/animations-blur.html: Added.
* LayoutTests/platform/glib/damage/basic-propagation-001.html:
* LayoutTests/platform/glib/damage/canvas-webgl-expected.txt: Added.
* LayoutTests/platform/glib/damage/canvas-webgl.html: Copied from LayoutTests/platform/glib/damage/basic-propagation-001.html.
* LayoutTests/platform/glib/damage/common.js:
(passTest):
* LayoutTests/platform/glib/damage/layer-downsize-expected.txt: Added.
* LayoutTests/platform/glib/damage/layer-downsize.html: Copied from LayoutTests/platform/glib/damage/basic-propagation-001.html.
* LayoutTests/platform/glib/damage/layer-in-layer-movement-expected.txt: Added.
* LayoutTests/platform/glib/damage/layer-in-layer-movement.html: Added.
* LayoutTests/platform/glib/damage/layer-movement-expected.txt: Added.
* LayoutTests/platform/glib/damage/layer-movement.html: Added.
* LayoutTests/platform/glib/damage/layer-resize-expected.txt: Added.
* LayoutTests/platform/glib/damage/layer-resize.html: Copied from LayoutTests/platform/glib/damage/basic-propagation-001.html.
* LayoutTests/platform/glib/damage/layer-upsize-expected.txt: Added.
* LayoutTests/platform/glib/damage/layer-upsize.html: Copied from LayoutTests/platform/glib/damage/basic-propagation-001.html.
* LayoutTests/platform/glib/damage/non-accelerated-canvas-2d-arc-expected.txt: Added.
* LayoutTests/platform/glib/damage/non-accelerated-canvas-2d-arc.html: Added.
* LayoutTests/platform/glib/damage/non-accelerated-canvas-2d-downsizing-expected.t

--- a/LayoutTests/platform/glib/damage/basic-propagation-002.html
+++ b/LayoutTests/platform/glib/damage/basic-propagation-002.html
@@ -22,8 +22,7 @@
     <script>
       setupTestCase({disableConsoleLog: true});
 
-      processAnimationFrameSequence([
-          () => {}, // Skip one RAF callback to make sure initial painting is done.
+      processAnimationFrameSequence({skipFirstFrameToEnsureInitialPaintingDone: true}, [
           () => {
               // Spawn parent rect with children.
               var parent = spawnNewElementWithClass("div", "parentRect");
