--- a/LayoutTests/platform/glib/damage/canvas-webgl.html
+++ b/LayoutTests/platform/glib/damage/canvas-webgl.html
@@ -2,28 +2,28 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="./common.css">
-    <style>
-      .simpleRect {
-          position: fixed;
-          width: 25px;
-          height: 25px;
-          background-color: black;
-      }
-    </style>
   </head>
   <body>
+    <canvas width="50" height="50" />
     <script src="./common.js"></script>
     <script>
       setupTestCase({disableConsoleLog: true});
 
+      var canvas = document.getElementsByTagName("canvas")[0];
+      var gl = canvas.getContext("webgl");
+      gl.viewport(0, 0, gl.drawingBufferWidth, gl.drawingBufferHeight);
+
       processAnimationFrameSequence({skipFirstFrameToEnsureInitialPaintingDone: true}, [
           () => {
-              spawnNewElementWithClass("div", "simpleRect");
+              gl.enable(gl.SCISSOR_TEST);
+              gl.scissor(5, 5, 10, 10);
+              gl.clearColor(0.0, 0.0, 1.0, 1.0);
+              gl.clear(gl.COLOR_BUFFER_BIT);
           },
           () => {
               var damage = latestFrameDamage();
               assertValid(damage);
-              assertRectsEq(damage.rects, [[0, 0, 25, 25]]);
+              assertRectsEq(damage.rects, [[0, 0, 50, 50]]);
           },
       ], 0);
     </script>
