--- a/LayoutTests/platform/glib/damage/layer-downsize.html
+++ b/LayoutTests/platform/glib/damage/layer-downsize.html
@@ -3,27 +3,33 @@
   <head>
     <link rel="stylesheet" href="./common.css">
     <style>
-      .simpleRect {
+      .layer {
           position: fixed;
-          width: 25px;
-          height: 25px;
-          background-color: black;
+          left: 7px;
+          top: 3px;
+          width: 50px;
+          height: 50px;
+          background-color: green;
       }
     </style>
   </head>
   <body>
+    <div class="layer"></div>
     <script src="./common.js"></script>
     <script>
       setupTestCase({disableConsoleLog: true});
 
+      var layer = document.getElementsByClassName("layer")[0];
+
       processAnimationFrameSequence({skipFirstFrameToEnsureInitialPaintingDone: true}, [
           () => {
-              spawnNewElementWithClass("div", "simpleRect");
+              layer.style.width = "40px";
+              layer.style.height = "40px";
           },
           () => {
               var damage = latestFrameDamage();
               assertValid(damage);
-              assertRectsEq(damage.rects, [[0, 0, 25, 25]]);
+              assertRectsEq(damage.rects, [[7, 3, 50, 50]]);
           },
       ], 0);
     </script>
