--- a/LayoutTests/platform/glib/damage/non-accelerated-canvas-2d-fillRect-w-offset.html
+++ b/LayoutTests/platform/glib/damage/non-accelerated-canvas-2d-fillRect-w-offset.html
@@ -3,27 +3,32 @@
   <head>
     <link rel="stylesheet" href="./common.css">
     <style>
-      .simpleRect {
+      canvas {
           position: fixed;
-          width: 25px;
-          height: 25px;
-          background-color: black;
+          top: 17px;
+          left: 17px;
       }
     </style>
   </head>
   <body>
+    <canvas width="50" height="50"/>
     <script src="./common.js"></script>
     <script>
       setupTestCase({disableConsoleLog: true});
 
+      var canvas = document.getElementsByTagName("canvas")[0];
+      var ctx = canvas.getContext("2d");
+
       processAnimationFrameSequence({skipFirstFrameToEnsureInitialPaintingDone: true}, [
           () => {
-              spawnNewElementWithClass("div", "simpleRect");
+              // Fill part of the canvas.
+              ctx.fillStyle = "green";
+              ctx.fillRect(10, 10, 10, 10);
           },
           () => {
               var damage = latestFrameDamage();
               assertValid(damage);
-              assertRectsEq(damage.rects, [[0, 0, 25, 25]]);
+              assertRectsEq(damage.rects, [[26, 26, 12, 12]]);
           },
       ], 0);
     </script>
