--- a/LayoutTests/platform/glib/damage/non-accelerated-canvas-2d-new-canvas.html
+++ b/LayoutTests/platform/glib/damage/non-accelerated-canvas-2d-new-canvas.html
@@ -2,14 +2,6 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="./common.css">
-    <style>
-      .simpleRect {
-          position: fixed;
-          width: 25px;
-          height: 25px;
-          background-color: black;
-      }
-    </style>
   </head>
   <body>
     <script src="./common.js"></script>
@@ -18,12 +10,16 @@
 
       processAnimationFrameSequence({skipFirstFrameToEnsureInitialPaintingDone: true}, [
           () => {
-              spawnNewElementWithClass("div", "simpleRect");
+              spawnNewElement("canvas", (canvas) => {
+                  canvas.width = 50;
+                  canvas.height = 50;
+              });
           },
           () => {
               var damage = latestFrameDamage();
               assertValid(damage);
-              assertRectsEq(damage.rects, [[0, 0, 25, 25]]);
+              // Height is 54 as in case of block, the RenderBox adds extra 2+2.
+              assertRectsEq(damage.rects, [[0, 0, window.innerWidth, 54]]);
           },
       ], 0);
     </script>
