Web Inspector: Timelines: Script: make the target into a hierarchical path component https://bugs.webkit.org/show_bug.cgi?id=288262
Reviewed by BJ Burg.

Instead of having a `WI.DataGrid` column for the `target`/"context" in `WI.ScriptDetailsTimelineView` and a dropdown to switch the `WI.CallingContextTree` based on the selected `WI.Target` in `WI.ScriptProfileTimelineView`, the `WI.Target` should be a hierarchical path component to have similar behavior to elsewhere in Web Inspector.

This also means that distinct `WI.ScriptProfileTimelineView` and `WI.ScriptDetailsTimelineView` are created for each `WI.Target` (as needed) instead of having each hold and switch between or display all `WI.Target` in the `WI.TimelineRecording`.

Note that the `WI.HierarchicalPathComponent` for the `WI.Target` is only shown if there's more than one `WI.Target` in the `WI.TimelineRecording`.

* Source/WebInspectorUI/UserInterface/Views/ScriptClusterTimelineView.js:
(WI.ScriptClusterTimelineView):
(WI.ScriptClusterTimelineView.createPathComponent):
(WI.ScriptClusterTimelineView.prototype.reset):
(WI.ScriptClusterTimelineView.prototype.get selectionPathComponents):
(WI.ScriptClusterTimelineView.prototype.saveToCookie):
(WI.ScriptClusterTimelineView.prototype.restoreFromCookie):
(WI.ScriptClusterTimelineView.prototype.closed):
(WI.ScriptClusterTimelineView.prototype._updateCurrentContentView):
(WI.ScriptClusterTimelineView.prototype._createTargetPathComponent): Added.
(WI.ScriptClusterTimelineView.prototype._sortTargetPathComponents): Added.
(WI.ScriptClusterTimelineView.prototype._handleViewPathComponentSelected):
(WI.ScriptClusterTimelineView.prototype._handleTargetAdded): Added.
(WI.ScriptClusterTimelineView.prototype._handleTargetPathComponentSelected): Added.
(WI.ScriptClusterTimelineView.prototype._scriptClusterViewCurrentContentViewDidChange):
(WI.ScriptClusterTimelineView.prototype.get eventsContentView): Deleted.
(WI.ScriptClusterTimelineView.prototype.get profileContentView): De

--- a/LayoutTests/inspector/unit-tests/map-utilities.html
+++ b/LayoutTests/inspector/unit-tests/map-utilities.html
@@ -78,6 +78,34 @@ function test()
         }
     });
 
+    suite.addTestCase({
+        name: "Map.prototype.firstKey",
+        test() {
+            const key1 = "key1";
+            const key2 = "key2";
+            const value1 = "value1";
+            const value2 = 200;
+
+            let map = new Map;
+            InspectorTest.expectEqual(map.firstKey, undefined, "Map should not start with a first key.");
+
+            map.set(key1, value1);
+            InspectorTest.expectEqual(map.firstKey, key1, "Map should have first key.");
+
+            map.set(key2, value2);
+            InspectorTest.expectEqual(map.firstKey, key1, "Map should have same first key after adding another entry.");
+
+            map.set(key1, value2);
+            InspectorTest.expectEqual(map.firstKey, key1, "Map should have same first key after changing its value.");
+
+            map.delete(key1);
+            InspectorTest.expectEqual(map.firstKey, key2, "Map should have different first key after deleting previous first key.");
+
+            map.delete(key2);
+            InspectorTest.expectEqual(map.firstKey, undefined, "Map should not have first key after deleting all entries.");
+        }
+    });
+
     suite.runTestCasesAndFinish();
 }
 </script>
