--- a/Source/WebInspectorUI/UserInterface/Test.html
+++ b/Source/WebInspectorUI/UserInterface/Test.html
@@ -223,6 +223,7 @@
     <script src="Models/ScreenshotsTimelineRecord.js"></script>
     <script src="Models/ScriptInstrument.js"></script>
     <script src="Models/ScriptSyntaxTree.js"></script>
+    <script src="Models/ScriptTimeline.js"></script>
     <script src="Models/ScriptTimelineRecord.js"></script>
     <script src="Models/ServerTimingEntry.js"></script>
     <script src="Models/ShaderProgram.js"></script>
