Re-import fullscreen WPT https://bugs.webkit.org/show_bug.cgi?id=288565 rdar://145628366
Reviewed by Alan Baradlay.

Upstream commit: https://github.com/web-platform-tests/wpt/commit/f4f11499c97edf0ab38fa67ee4eccf5b28dba1c3

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/resources/resource-files.json:
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/api/document-exit-fullscreen-nested-in-iframe-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/api/document-exit-fullscreen-nested-in-iframe.html:
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/api/document-exit-fullscreen-twice.html:
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/api/element-ready-check-fullscreen-element-sibling.html:
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/api/element-request-fullscreen-options.tentative-expected.txt: Removed.
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/api/element-request-fullscreen-options.tentative.html: Removed.
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/api/element-request-fullscreen-timing.html:
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/api/w3c-import.log:
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/model/remove-first.html:
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/model/remove-last.html:
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/model/w3c-import.log:
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/rendering/backdrop-iframe-ref.html: Removed.
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/rendering/backdrop-iframe.html:
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/rendering/backdrop-object.html:
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/rendering/fullscreen-root-fills-page-expected.html:
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/rendering/fullscreen-root-fills-page-ref.html:
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/rendering/fullscreen-root-f

--- a/LayoutTests/imported/w3c/web-platform-tests/fullscreen/rendering/fullscreen-root-fills-page-expected.html
+++ b/LayoutTests/imported/w3c/web-platform-tests/fullscreen/rendering/fullscreen-root-fills-page-expected.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="reftest-wait">
+<html>
 <head>
     <style>
         html, body {
@@ -14,16 +14,5 @@
         }
     </style>
 </head>
-
-<body>
-    <script src="/resources/testdriver.js"></script>
-    <script src="/resources/testdriver-vendor.js"></script>
-    <script>
-        document.addEventListener("fullscreenchange", () => {
-            document.documentElement.classList.remove("reftest-wait");
-        });
-        test_driver.bless("fullscreen")
-            .then(() => document.documentElement.requestFullscreen())
-    </script>
-</body>
+<body></body>
 </html>
