Use scoped lifetime pattern for `m_pendingExitFullscreen` https://bugs.webkit.org/show_bug.cgi?id=288939 rdar://145967977
Reviewed by Wenson Hsieh.

Now that we have proper asynchronous code, we can use a scoped lifetime pattern for `m_pendingExitFullscreen`, which prevents us
from forgetting to reset that flag and accidentally breaking fullscreen entry.

This fixes a bug where we forgot to clean up the flag in the multiple elements case, which broke requesting fullscreen after popping
one out of many elements from the fullscreen stack.

Add a test suite that makes sure all cases are covered, and that we do not forget to clean up the flag.

* LayoutTests/TestExpectations:
* LayoutTests/fullscreen/full-screen-enter-while-exiting-expected.txt:
* LayoutTests/fullscreen/full-screen-enter-while-exiting-fully-expected.txt: Added.
* LayoutTests/fullscreen/full-screen-enter-while-exiting-fully-mid-completion-handler-expected.txt: Added.
* LayoutTests/fullscreen/full-screen-enter-while-exiting-fully-mid-completion-handler.html: Added.
* LayoutTests/fullscreen/full-screen-enter-while-exiting-fully.html: Added.
* LayoutTests/fullscreen/full-screen-enter-while-exiting-mid-completion-handler-expected.txt: Added.
* LayoutTests/fullscreen/full-screen-enter-while-exiting-mid-completion-handler.html: Copied from LayoutTests/fullscreen/full-screen-enter-while-exiting.html.
* LayoutTests/fullscreen/full-screen-enter-while-exiting-multiple-elements-expected.txt: Added.
* LayoutTests/fullscreen/full-screen-enter-while-exiting-multiple-elements.html: Added.
* LayoutTests/fullscreen/full-screen-enter-while-exiting.html:
* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/gtk/TestExpectations:
* LayoutTests/platform/mac-wk1/TestExpectations:
* LayoutTests/platform/wk2/TestExpectations:
* Source/WebCore/dom/DocumentFullscreen.cpp:
(WebCore::DocumentFullscreen::exitFullscreen):
(WebCore::DocumentFullscreen::didExitFullscreen):
(WebCore::DocumentFullscreen::fullyExitFullscree

--- a/LayoutTests/fullscreen/full-screen-enter-while-exiting-mid-completion-handler.html
+++ b/LayoutTests/fullscreen/full-screen-enter-while-exiting-mid-completion-handler.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Entering fullscreen while exiting fullscreen</title>
+    <title>Entering fullscreen while exiting fullscreen mid-completion handler</title>
     <script src="full-screen-test.js"></script>
     <script>
 
@@ -12,11 +12,13 @@
             return;
         }
 
-        if (!window.testRunner) {
+        if (!window.testRunner || !window.testRunner.isWebKit2) {
             logResult(false, "This test requires WebKitTestRunner.");
             endTest();
             return;
         }
+
+        testRunner.waitBeforeFinishingFullscreenExit();
 
         consoleWrite('Enter fullscreen with target1');
         internals.withUserGesture(() => { run('target1.requestFullscreen()'); });
@@ -25,11 +27,15 @@
 
         consoleWrite('Exit fullscreen with target1');
         run('document.exitFullscreen()');
+        changePromise = waitFor(document, 'fullscreenchange')
+        await testRunner.updatePresentation();
 
         consoleWrite('Attempt to enter fullscreen with target2');
         internals.withUserGesture(() => { run('target2.requestFullscreen()'); });
 
         await waitFor(target2, 'fullscreenerror');
+
+        testRunner.finishFullscreenExit();
         await testRunner.updatePresentation();
 
         internals.withUserGesture(() => { run('target2.requestFullscreen()'); });
