--- a/LayoutTests/fullscreen/full-screen-enter-while-exiting-fully-mid-completion-handler.html
+++ b/LayoutTests/fullscreen/full-screen-enter-while-exiting-fully-mid-completion-handler.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Entering fullscreen while exiting fullscreen</title>
+    <title>Entering fullscreen while fully exiting fullscreen mid-completion handler</title>
     <script src="full-screen-test.js"></script>
     <script>
 
@@ -12,24 +12,28 @@
             return;
         }
 
-        if (!window.testRunner) {
+        if (!window.testRunner || !window.testRunner.isWebKit2) {
             logResult(false, "This test requires WebKitTestRunner.");
             endTest();
             return;
         }
+
+        testRunner.waitBeforeFinishingFullscreenExit();
 
         consoleWrite('Enter fullscreen with target1');
         internals.withUserGesture(() => { run('target1.requestFullscreen()'); });
         await waitFor(target1, 'fullscreenchange');
         await testRunner.updatePresentation();
 
-        consoleWrite('Exit fullscreen with target1');
-        run('document.exitFullscreen()');
+        consoleWrite('Fully exit fullscreen with target1');
+        run('document.webkitCancelFullScreen()');
 
         consoleWrite('Attempt to enter fullscreen with target2');
         internals.withUserGesture(() => { run('target2.requestFullscreen()'); });
 
         await waitFor(target2, 'fullscreenerror');
+
+        testRunner.finishFullscreenExit();
         await testRunner.updatePresentation();
 
         internals.withUserGesture(() => { run('target2.requestFullscreen()'); });
