--- a/LayoutTests/fullscreen/full-screen-enter-while-exiting-fully.html
+++ b/LayoutTests/fullscreen/full-screen-enter-while-exiting-fully.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Entering fullscreen while exiting fullscreen</title>
+    <title>Entering fullscreen while fully exiting fullscreen</title>
     <script src="full-screen-test.js"></script>
     <script>
 
@@ -23,8 +23,8 @@
         await waitFor(target1, 'fullscreenchange');
         await testRunner.updatePresentation();
 
-        consoleWrite('Exit fullscreen with target1');
-        run('document.exitFullscreen()');
+        consoleWrite('Fully exit fullscreen with target1');
+        run('document.webkitCancelFullScreen()');
 
         consoleWrite('Attempt to enter fullscreen with target2');
         internals.withUserGesture(() => { run('target2.requestFullscreen()'); });
