--- a/LayoutTests/fullscreen/full-screen-enter-while-exiting-multiple-elements.html
+++ b/LayoutTests/fullscreen/full-screen-enter-while-exiting-multiple-elements.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Entering fullscreen while exiting fullscreen</title>
+    <title>Entering fullscreen while popping a stack of multiple elements</title>
     <script src="full-screen-test.js"></script>
     <script>
 
@@ -23,17 +23,23 @@
         await waitFor(target1, 'fullscreenchange');
         await testRunner.updatePresentation();
 
+        consoleWrite('Enter fullscreen with target2');
+        internals.withUserGesture(() => { run('target2.requestFullscreen()'); });
+        await waitFor(target2, 'fullscreenchange');
+        await testRunner.updatePresentation();
+
         consoleWrite('Exit fullscreen with target1');
         run('document.exitFullscreen()');
 
-        consoleWrite('Attempt to enter fullscreen with target2');
-        internals.withUserGesture(() => { run('target2.requestFullscreen()'); });
+        consoleWrite('Attempt to enter fullscreen with target3');
+        internals.withUserGesture(() => { run('target3.requestFullscreen()'); });
 
-        await waitFor(target2, 'fullscreenerror');
+        await Promise.all([waitFor(target3, 'fullscreenerror'), waitFor(target2, 'fullscreenchange')]);
         await testRunner.updatePresentation();
 
-        internals.withUserGesture(() => { run('target2.requestFullscreen()'); });
-        await waitFor(target2, 'fullscreenchange');
+        consoleWrite('Entering fullscreen with target3');
+        internals.withUserGesture(() => { run('target3.requestFullscreen()'); });
+        await waitFor(target3, 'fullscreenchange');
 
         endTest();
     });
@@ -42,5 +48,6 @@
 <body>
 <span id="target1"></span>
 <span id="target2"></span>
+<span id="target3"></span>
 </body>
 </html>
